add -e enhanced to man page

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -28,6 +28,9 @@ establish both a server (to discard traffic) and a client (to generate
 traffic).  
 .SH "GENERAL OPTIONS"
 .TP
+.BR -e ", " --enhanced " "
+Display enhanced output in reports
+.TP
 .BR -f ", " --format " "
 [kmKM]   format to report: Kbits, Mbits, KBytes, MBytes
 .TP
