support for 64 bit sequence numbers

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -55,6 +55,9 @@ set server port to listen on/connect to to \fIn\fR (default 5001)
 .BR -u ", " --udp " "
 use UDP rather than TCP
 .TP
+.BR "    --udp-counters-64bit "
+use 64 bit UDP sequence numbers
+.TP
 .BR -w ", " --window " \fIn\fR[KM]"
 TCP window size (socket buffer size)
 .TP
