add -S and --tos to man page and help, and format options to same

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -76,6 +76,9 @@ set TCP maximum segment size (MTU - 40 bytes)
 .BR -N ", " --nodelay " "
 set TCP no delay, disabling Nagle's Algorithm
 .TP
+.BR -S ", " --tos " "
+set the socket's IP_TOS (byte) field
+.TP
 .BR -v ", " --version " "
 print version information and quit
 .TP
