add a,b to man page per -f format option

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -32,7 +32,7 @@ traffic).
 Display enhanced output in reports
 .TP
 .BR -f ", " --format " "
-[kmgKMG]   format to report: Kbits, Mbits, KBytes, MBytes (see NOTES for more)
+[abkmgKMG]   format to report: adaptive, bits, Kbits, Mbits, KBytes, MBytes (see NOTES for more)
 .TP
 .BR -h ", " --help " "
 print a help synopsis
