add B for Bytes in format man page

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -32,7 +32,7 @@ traffic).
 Display enhanced output in reports
 .TP
 .BR -f ", " --format " "
-[abkmgKMG]   format to report: adaptive, bits, Kbits, Mbits, Gbits, KBytes, MBytes, GBytes (see NOTES for more)
+[abkmgBKMG]   format to report: adaptive, bits, Bytes, Kbits, Mbits, Gbits, KBytes, MBytes, GBytes (see NOTES for more)
 .TP
 .BR -h ", " --help " "
 print a help synopsis
