add isochronous to man page

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -40,6 +40,12 @@ print a help synopsis
 .BR -i ", " --interval " \fIn\fR"
 pause \fIn\fR seconds between periodic bandwidth reports
 .TP
+.BR "    --ipg "
+set the the interpacket gap in units of milliseconds for isochronous bursts
+.TP
+.BR "    --isochronous "\fIfps\fR:\fImean\fR,\fIvariance\fR
+send isochronous traffic with frequency frames per second and load defined by mean and variance using log normal distribution
+.TP
 .BR -l ", " --len " \fIn\fR[kmKM]"
 set read/write buffer size (TCP) or length (UDP) to \fIn\fR (TCP default 128K, UDP default 1470)
 .TP
