--- a/man/iperf.1
+++ b/man/iperf.1
@@ -95,8 +95,12 @@ exclude C(connection) D(data) M(multicast) S(settings) V(server) reports
 if set to C or c report results as CSV (comma separated values)
 .SH "SERVER SPECIFIC OPTIONS"
 .TP
+.BR "    --udp-histogram "\fIbinwidth\fR[u],\fIbincount\fR
+output UDP latency histograms, bin widths default to milliseconds (append u for microseconds) and bincount is total bins.
+.TP
 .BR -s ", " --server " "
 run in server mode
+
 .TP
 .BR -D ", " --daemon " "
 run the server as a daemon.  On Windows this will also install the IPerfService.
