fix incr-dstip w/v6

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -40,6 +40,9 @@ print a help synopsis
 .BR -i ", " --interval " \fIn\fR"
 pause \fIn\fR seconds between periodic bandwidth reports
 .TP
+.BR "    --incr-dstip"
+increment the destination ip address when using the parallel (-P) option
+.TP
 .BR "    --ipg "\fIn\fR
 set the interpacket gap to \fIn\fR (units of milliseconds) for packets within an isochronous frame (burst)
 .TP
