--- a/man/iperf.1
+++ b/man/iperf.1
@@ -29,7 +29,7 @@ traffic).
 .SH "GENERAL OPTIONS"
 .TP
 .BR -e ", " --enhanced " "
-Display enhanced output in reports (See Notes section)
+Display enhanced output in reports (see notes)
 .TP
 .BR -f ", " --format " "
 [abkmgBKMG]   format to report: adaptive, bits, Bytes, Kbits, Mbits, Gbits, KBytes, MBytes, GBytes (see NOTES for more)
@@ -185,7 +185,7 @@ Controls the size of TCP buffers.
 .SH NOTES
 Some numeric options support format characters per '<value>\fIc\fR' (e.g. 10M) where the \fIc\fR format characters are k,m,g,K,M,G.  Lowercase format characters are 10^3 based and uppercase are 2^n based, e.g. 1k = 1000, 1K = 1024, 1m = 1,000,000 and 1M = 1,048,576
 .TP
-The -e or --enhanced latency output on the UDP servers assumes the clients' and servers' system clocks are synchronized.  Network Time Protocol (NTP) and Precision Time Protocol (PTP) are commonly used for this.  The reference clock or oscialltor's error will also affect the accuracy of UDP latency measurements.
+The -e or --enhanced latency output on the UDP servers assumes the clients' and servers' system clocks are synchronized.  Network Time Protocol (NTP) and Precision Time Protocol (PTP) are commonly used for this.  The reference clock(s) or oscillator's error will also affect the accuracy of UDP latency measurements.
 .TP
 The -B option affects the bind() system call.  This is typically used to bind to a particular IP address. Only packets destined to that IP address will be received while any transmitted packets will carry that IP address as their source. The bind() does not control anything about the routing of transmitted packets. So, for example, if the IP address of eth0 is used for -B and the routing table for the destination IP address (per -c) resolves the ouput interface to be eth1, then the host will send the packet out device eth1 with the source IP address of eth0.  To affect the physical output interface (e.g. dual homed systems) the host's routing table(s) need to be configured, e.g. configure policy routing per each -B source address.
 .SH DIAGNOSTICS
