--- a/man/iperf.1
+++ b/man/iperf.1
@@ -170,8 +170,8 @@ reverse the traffic flow after header exchange, useful for testing through firew
 .BR -T ", " --ttl " \fIn\fR"
 time-to-live, for multicast (default 1)
 .TP
-.BR "    --vary-load "
-vary the offered load (using a lognormal distribution w/mean per the -b value)
+.BR "    --vary-load[=" \fIn\fR "]"
+vary the offered load (using a lognormal distribution w/mean per the -b value), using weight \fIn\fR to set variance
 .TP
 .BR -V ", " --ipv6_domain " "
 Set the domain to IPv6 (send packets over IPv6)
