support weight with --vary-load

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -171,7 +171,7 @@ reverse the traffic flow after header exchange, useful for testing through firew
 time-to-live, for multicast (default 1)
 .TP
 .BR "    --vary-load[=" \fIn\fR "]"
-vary the offered load (using a lognormal distribution w/mean per the -b value), using weight \fIn\fR to set variance
+vary the offered load (using a lognormal distribution w/mean per the -b value), using weight \fIn\fR to set variance (defaults to 0.25)
 .TP
 .BR -V ", " --ipv6_domain " "
 Set the domain to IPv6 (send packets over IPv6)
