--- a/man/iperf.1
+++ b/man/iperf.1
@@ -104,12 +104,11 @@ exclude C(connection) D(data) M(multicast) S(settings) V(server) reports
 if set to C or c report results as CSV (comma separated values)
 .SH "SERVER SPECIFIC OPTIONS"
 .TP
-.BR "    --udp-histogram "\fIbinwidth\fR[u],\fIbincount\fR,[\fIlowerci\fR],[\fIupperci\fR]
-output UDP latency histograms, bin widths default to milliseconds (append u for microseconds,) bincount is total bins, ci is confidence interval between 0-100
-.TP
 .BR -s ", " --server " "
 run in server mode
-
+.TP
+.BR "    --udp-histogram[="\fIbinwidth\fR[u],\fIbincount\fR,[\fIlowerci\fR],[\fIupperci\fR] "]"
+output UDP latency histograms, bin width (default 1 millisecond, append u for microseconds,) bincount is total bins (default 1000), ci is confidence interval between 0-100% (default lower 5%, upper 95%)
 .TP
 .BR -B ", " --bind " \fIip\fR | \fIip\fR%\fIdevice\fR"
 bind src ip addr and optional src device for receiving
