update man page for tcp connect time and net power

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -194,6 +194,10 @@ The -b option supports variable offered loads through the <mean>,<standard devia
 The -e or --enhanced latency output on the UDP servers assumes the clients' and servers' system clocks are synchronized.  Network Time Protocol (NTP) or Precision Time Protocol (PTP) are commonly used for this.  The reference clock(s) or oscillator's error will also affect the accuracy of UDP latency measurements.
 .TP
 The -B option affects the bind() system call.  This is typically used to bind to a particular IP address. Only packets destined to that IP address will be received while any transmitted packets will carry that IP address as their source. The bind() does not control anything about the routing of transmitted packets. So, for example, if the IP address of eth0 is used for -B and the routing table for the destination IP address (per -c) resolves the ouput interface to be eth1, then the host will send the packet out device eth1 with the source IP address of eth0.  To affect the physical output interface (e.g. dual homed systems) the host's routing table(s) need to be configured, e.g. configure policy routing per each -B source address.
+.TP
+The TCP connect time (or three way handshake) can be seen on the iperf client when the -e (--enhancedreports) option is set. Look for the ct=<value> in the connected message, e.g.in '[  3] local 192.168.1.4 port 48736 connected with 192.168.1.1 port 5001 \fB(ct=1.84 ms)\fR' shows the 3WHS took 1.84 milliseconds.
+.TP
+The network power (NetPwr) metric is \fBexperimental\fR.  It's a convenience function defined as throughput/delay.  For TCP, the delay is the sampled RTT times.  For UDP the delay is the end/end latency.  Don't confuse this with the physics definition of power (delta energy/delta time) but more of a measure of a desireable property divided by an undesireable property.  Also note, one must use -i interval with TCP to get this as that's what sets the RTT sampling rate.  The metric is scaled to assist with human readability.  (Note: if this metric goes beyond the experimental state we'll consider a supporting and RTT sampling rate independent of the -i interval.)
 .SH DIAGNOSTICS
 This section needs to be filled in.
 .SH BUGS
