--- a/man/iperf.1
+++ b/man/iperf.1
@@ -130,7 +130,7 @@ run in client mode, connecting to \fIhost\fR
 .BR -d ", " --dualtest " "
 Do a bidirectional test simultaneously
 .TP
-.BR "    --fq-rate n[KM]"
+.BR "    --fq-rate n[kmgKMG]"
 Set a rate to be used with fair-queueing based socket-level pacing, in bits per second. Only available on platforms supporting the SO_MAX_PACING_RATE socket option
 .TP
 .BR "    --incr-dstip"
