--- a/man/iperf.1
+++ b/man/iperf.1
@@ -152,7 +152,7 @@ Do a bidirectional test individually
 time in seconds to listen for new traffic connections, receive traffic or transmit traffic (Defaults: transmit is 10 secs while listen and receive are indefinite)
 .TP
 .BR "    --trip-time "
-request the server to report the total trip time, i.e from the client's 3WHS done to server's socket close (requires synchronized clocks)
+request the server to report the total trip time, i.e from the client's 3WHS done to client's (fin, fin-ack or socket close) (requires synchronized clocks)
 .TP
 .BR "    --tx-sync "\fIn\fR
 set the tx-sync interval to \fIn\fR (units of seconds) for synchronized packet writes
