remove all UDPTRIGGERS code (way to device specific), remove --tx-sync option (proved not too useful), add support for --txstart-time on clients, fix connection report race per things like -X peer exchange

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -154,8 +154,8 @@ time in seconds to listen for new traffic connections, receive traffic or transm
 .BR "    --trip-time "
 request the server to report the total trip time, i.e from the client's 3WHS done to client's (fin, fin-ack or socket close) (requires synchronized clocks)
 .TP
-.BR "    --tx-sync "\fIn\fR
-set the tx-sync interval to \fIn\fR (units of seconds) for synchronized packet writes
+.BR "    --txstart-time "\fIn\fR.\fIn\fR
+set the txstart-time to \fIn\fR.\fIn\fR using unix or epoch time format (supports seconds.microseconds)
 .TP
 .BR -B ", " --bind " \fIip\fR | \fIip\fR:\fIport\fR | \fIipv6 -V\fR | \fI[ipv6]\fR:\fIport -V\fR"
 bind src ip addr and optional port as the source of traffic (see notes)
