update man page for -b and vbr

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -29,7 +29,7 @@ traffic).
 .SH "GENERAL OPTIONS"
 .TP
 .BR -b ", " --bandwidth " "
-set the target bandwidth (and optional standard devation where supported)
+set the target bandwidth and optional standard devation per \fI<mean>\fR,\fI[<stdev>]\fR (See NOTES for suffixes)
 .TP
 .BR -e ", " --enhanced " "
 Display enhanced output in reports otherwise use legacy report (ver 2.0.5) formatting (see notes)
